# thisdiagnostic

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: derive_enum.rs  derive_struct.rs
thisdiagnostic-derive/: Cargo.toml
thisdiagnostic-derive/src/: lib.rs
