[package]
name = "thisdiagnostic"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Add nice user-facing diagnostics to your errors without being weird about it."
categories = ["rust-patterns"]
repository = "https://github.com/zkat/thisdiagnostic"
documentation = "https://docs.rs/thisdiagnostic"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[workspace]
members = [
    ".",
    "thisdiagnostic-derive"
]

[dependencies]
thiserror = "1.0.22"
colored = "2.0.0"
thisdiagnostic-derive = { path = "./thisdiagnostic-derive", version = "0.1.0" }
