[package]
name = "thisdiagnostic-derive"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "derive macro for thisdiagnostic"
categories = ["rust-patterns"]
repository = "https://github.com/zkat/thisdiagnostic"
documentation = "https://docs.rs/thisdiagnostic"
license = "Apache-2.0"
readme = "../README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
